--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
-    "next": "16.0.0",
+    "next": "^16.0.8",
     "next-cloudinary": "^6.16.2",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.3.1"
   },
